--- a/assets/css/mac_add-to-favorites.css
+++ b/assets/css/mac_add-to-favorites.css
@@ -1,4 +1,4 @@
-p a.favorites-link{
+p a.add-favorites-link{
     text-decoration: none;
     border: none;
     -webkit-transition: all 0.3s;
@@ -8,7 +8,7 @@ p a.favorites-link{
     transition: all 0.3s;
 }
 
-p a.favorites-link:hover{
+p a.add-favorites-link:hover{
     color: orangered;
 }
 
